--- a/index.haml
+++ b/index.haml
@@ -2,11 +2,12 @@
 %html
   %head
     %title= title
-    %base(href=base)
+    - if base
+      %base(href=base)
     %meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
-    %link(rel="stylesheet" href="../../home.css" type="text/css" media="screen, projection")
-    %script(type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js")
-    %script(type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/masonry/2.1.08/jquery.masonry.min.js")
+    %link(rel="stylesheet" href="#{css_path}home.css" type="text/css" media="screen, projection")
+    %script(type="text/javascript" src="#{schemac}//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js")
+    %script(type="text/javascript" src="#{schemac}//cdnjs.cloudflare.com/ajax/libs/masonry/2.1.08/jquery.masonry.min.js")
 
 %body
   %h1= title
