publish folder list to firebase

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,6 +5,7 @@
     %link(rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css")
     %script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js')
     %script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.1/angular.min.js')
+    %script(src='https://cdn.firebase.com/v0/firebase.js')
     %script(src='/application.js')
 
   %body(ng-app)
